# Ecommerce-Store

Backend/: .env  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
Backend/alembic/: env.py
Backend/alembic/versions/: 5741805bdb29_add_user_product_size_color_category_.py  5b73a03e0121_rest_of_the_models.py  ca141283f45a_add_ondelete_cascade_to_product_images_.py
Backend/src/app/: main.py
Backend/src/app/api/v1/endpoints/: address.py  admin.py  auth.py  product.py  promotion.py  user.py  wishlist.py
Backend/src/app/api/v1/endpoints/product_attributes/: category.py  color.py  size.py
Backend/src/app/core/: config.py  security.py
Backend/src/app/crud/: address_crud.py  category_crud.py  color_crud.py  product_crud.py  promotion_crud.py  user_crud.py  wishlist_crud.py
Backend/src/app/crud/product_attributes/: size_crud.py
Backend/src/app/db/: base.py  redis_conn.py
Backend/src/app/models/: address_model.py  cart_model.py  order_model.py  product_model.py  promotion_model.py  user_model.py  wishlist_model.py
Backend/src/app/schemas/: address_schema.py  auth_schema.py  category_schema.py  color_schema.py  product_schema.py  promotion_schema.py  size_schema.py  user_schema.py  wishlist_schema.py
Backend/src/app/services/: address_service.py  auth_service.py  product_service.py  promotion_service.py  user_service.py  wishlist_service.py
Backend/src/app/services/product_attributes/: category_service.py  color_service.py  size_service.py
Backend/src/app/utils/: deps.py
Frontend/: .gitignore  index.html  package-lock.json  package.json  (+1 more)
(+29 files in other folders)
