[project]
name = "ecommerce_store"
version = "0.1.0"
description = "Backend for E-commerce project"
authors = [
    {name = "vansh212121",email = "arora199vash@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.119.1,<0.120.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "redis (>=6.4.0,<7.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pydantic[email] (>=2.12.3,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
